--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,8 +21,12 @@
             <a class="navbar-brand" href="/">flasky</a>
         </div>
         <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/">home</a></li>
+            <ul class="nav navbar-nav navbar-right">
+              {% if current_user.is_authenticated() %}
+                <li><a href="{{ url_for('auth.logout') }}">Sign Out</a></li>
+                {% else %}
+                <li><a href="{{ url_for('auth.login') }}">Sign In</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
